--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -19,7 +19,7 @@ fileDownload: true
               <figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
             </figure>
             <p>
-              The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or <a href="assessorPlatMaps/">assessor’s plat record</a> of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual Assessment Notice.
+              The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or <a href="assessorPlatMapsDT/">Assessor’s Plat Record</a> of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual <a href="#" onclick="downloadFileEx('Assessment-Notice-Sample.pdf'); return false;">Assessment Notice</a>.
             </p>
             <p>
               The Assessor submits annual property rolls and abstracts with all of the county’s assessment data to the County Auditor and the State Tax Commission. These reports include the overall taxable value of all property located within the boundaries of local taxing districts. This total taxable value is part of the calculation used by local taxing districts to set their annual property tax levies.
@@ -163,10 +163,10 @@ fileDownload: true
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <ul class="list-group">
-        <li class="list-group-item text-center">Assessor's Plat Record</li>        
-        <li class="list-group-item text-center">Property Assessments</li>                
-        <li class="list-group-item text-center">Property Tax Relief</li>        
-        <li class="list-group-item text-center">Vehicle licensing</li>
+        <a href="assessorPlatMapsDT/" class="list-group-item list-link text-center">Assessor's Plat Record</a>        
+        <a href="#" class="list-group-item list-link text-center" onclick="downloadFileEx('Assessment-Notice-Sample.pdf'); return false;">Property Assessments</a>                
+        <a href="https://tax.idaho.gov/pubs/EBR00135_10-24-2017.pdf" class="list-group-item list-link text-center">Property Tax Relief</a>        
+        <a href="../dmv/" class="list-group-item list-link text-center">Vehicle licensing</a>
       </ul>
     </div>
 
@@ -176,10 +176,9 @@ fileDownload: true
         <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
-        <a href="#" class="list-group-item list-link text-center" onclick="downloadFileEx('Assessment-Notice-Sample.pdf'); return false;">Assessment Notice Sample</a>
-        <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
-        <a href="assessorPlatMapsDT/" class="list-group-item list-link text-center">Assessor Plat Maps</a>        
-        <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item list-link text-center" target="_blank">Homeowners &amp;Property Tax</a>
+        
+        <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>        
+        <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item list-link text-center" target="_blank">Homeowners &amp; Property Tax</a>
         <a href="http://gis.latah.id.us/ParcelViewer/ParcelViewer.html" class="list-group-item list-link text-center" target="_blank">Latah County Parcel Viewer</a>
         <a href="taxexemptproperty.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Tax Exempt Property & FAQ</a>
       </div>
