--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -22,7 +22,7 @@ fileDownload: true
               The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or <a href="assessorPlatMapsDT/">Assessor’s Plat Record</a> of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual <a href="#" onclick="downloadFileEx('Assessment-Notice-Sample.pdf'); return false;">Assessment Notice</a>.
             </p>
             <p>
-              The Assessor submits annual property rolls and abstracts with all of the county’s assessment data to the County Auditor and the State Tax Commission. These reports include the overall taxable value of all property located within the boundaries of local taxing districts. This total taxable value is part of the calculation used by local taxing districts to set their annual property tax levies.
+              The Assessor submits annual property rolls and abstracts with all of the county’s assessment data to the County Auditor and the State Tax Commission. These reports include the <a href="#" onclick="downloadFileEx('September_values_2017.pdf'); return false;">overall taxable value</a> of all property located within the boundaries of local taxing districts. This total taxable value is part of the calculation used by local taxing districts to set their annual property tax levies.
             </p>
             <p>
               The property tax levy is the rate at which all property will be taxed in order to collect the amount of property taxes approved in that year’s budget. The assessed value of each property determines that property owner’s share of the annual property taxes to be collected.
