updated PB link to agenda notify

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -35,7 +35,7 @@ fileDownload: true
 				<a href="#" class="list-group-item list-link text-center" onclick="downloadFileEx('Current Public Hearing Packets.pdf'); return false;">Current Public Hearing Packets</a>				
 				<a href="#" class="list-group-item list-link text-center" onclick="downloadFileEx('Current Zoning Commission Agenda.pdf'); return false;">Current Zoning Commission Agenda</a>				
 				<a href="gis/" class="list-group-item list-link text-center">Maps</a>
-				<a href="http://www.latah.id.us/mailman/listinfo/planzone" class="list-group-item list-link text-center" >Signup for Meeting Notices</a>   	
+				<a href="https://listmail.latah.id.us/mailman/listinfo/planzone" class="list-group-item list-link text-center" >Signup for Meeting Notices</a>   	
 			</div>
 		</div>		
 	</div>
