Fixed #121, Added Arts Commission.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -8,6 +8,60 @@ tree: true
 <div class="row">
   <div class="col-md-offset-1 col-md-10">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <!-- Arts and Culture -->
+      <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingBOCG">
+            <h4 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseAC" aria-expanded="false" aria-controls="collapseAC">
+                Arts and Culture
+              </a>
+            </h4>
+          </div>
+          <div id="collapseAC" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingBOCG">
+            <div class="panel-body">
+              <div class="col-md-8">
+                <p>
+                  Description is pending.
+                </p>
+              </div>
+              <div class="col-md-4">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><strong>Contact:</strong></h3>
+                  </div>
+                  <div class="panel-body">
+                    <strong>Chair:</strong><br />
+                      Kathy Zenner<br />
+                    <strong>Email:</strong><br />
+                      <a href="mailto:rkzenner@gmail.com">rkzenner@gmail.com</a><br />
+                    <strong>Secretary:</strong><br />
+                      Troy Sprenke<br />
+                    <strong>Email:</strong><br />
+                      <a href="mailto:troys@turbonet.com">troys@turbonet.com</a><br />
+                    <strong>Address:</strong><br />
+                      Pending<br />                    
+                    <strong>BOCC Representative:</strong><br />
+                    Tom Lamar<br />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-primary" id="agendas">
+              <div class="panel-heading" >
+                <h4 class="panel-title text-center">Agendas, Minutes, Documents</h4>
+              </div>
+              <div class="list-group">
+                <div id="bocgAgendas"></div>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+                <div class="list-group pre-scrollable">
+                  <div id="agendas" class="list-group-item"></div>
+                  <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       <!-- BOCG -->
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingBOCG">
