Updated address and fixed tree configuration.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -39,7 +39,8 @@ tree: true
                     <strong>Email:</strong><br />
                       <a href="mailto:troys@turbonet.com">troys@turbonet.com</a><br />
                     <strong>Address:</strong><br />
-                      Pending<br />                    
+                      PO Box 8068<br />                    
+                      Moscow, ID 83843<br />                    
                     <strong>BOCC Representative:</strong><br />
                     Tom Lamar<br />
                   </div>
@@ -51,7 +52,7 @@ tree: true
                 <h4 class="panel-title text-center">Agendas, Minutes, Documents</h4>
               </div>
               <div class="list-group">
-                <div id="bocgAgendas"></div>
+                <div id="artsCultureAgendas"></div>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
                 <div class="list-group pre-scrollable">
@@ -406,5 +407,6 @@ tree: true
 <script type="text/javascript">
 	deptTree("bocgAgendas", "Com-BOCG")
 	deptTree("lpcAgendas", "Com-LPC")
-	deptTree("prbAgendas", "Com-PRB")	
+  deptTree("prbAgendas", "Com-PRB")	
+  deptTree("artsCultureAgendas", "Com-ArtsCulture")
 </script>
