--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -366,7 +366,7 @@ tree: true
 									<strong>Fax:</strong><br />
 									(208) 883-2280<br />
 									<strong>Email:</strong><br />
-									<a href="mailto:solidwaste@latah.id.us">solidwaste@latah.id.us<br />
+									<a href="mailto:solidwaste@latah.id.us">solidwaste@latah.id.us</a><br />
                   <strong>Location:</strong><br />
 									Latah County Courthouse<br />
 									<strong>BOCC Rep</strong>
