--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -211,9 +211,9 @@ tree: true
                 <div class="panel-body">
 									<h4>Parks &amp; Rec Board</h4>
                   <strong>Chairman:</strong><br />
-									Dan Leonard<br />
-									<strong>Phone:</strong><br />
-									(509) 332-8211<br />
+									Ron Jones<br />
+									<strong>Email:</strong><br />
+									rangerron233@icloud.com<br />
 									<h4>Latah County Parks &amp; Rec</h4>
                   <strong>Director:</strong><br />
 									Andrew Grant<br />
