--- a/_pages/dept/driver_licensing/home.html
+++ b/_pages/dept/driver_licensing/home.html
@@ -97,8 +97,8 @@ tree: true
         <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
-        <a href="http://itd.idaho.gov/itddmv/?target=drivers-license-id-cards" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Idaho Transportation Department Drivers Services</a>        
-        <a href="https://itd.idaho.gov/starcard/" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Starcard Information</a>        
+        <a href="http://itd.idaho.gov/itddmv/?target=drivers-license-id-cards" class="list-group-item list-link text-center">Idaho Transportation Department Drivers Services</a>        
+        <a href="https://itd.idaho.gov/starcard/" class="list-group-item list-link text-center" >Starcard Information</a>        
       </div>
     </div>
   </div>
