--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -146,7 +146,7 @@ tree: true
                 We encourage and welcome all public participation at our regular meetings. Please find your local Commission member with the link on this page and the meeting notice with agenda.
               </p>
               <p>
-                We meet at 1:30 pm on the last Thursday of the month at the location specified in the meeting notice.
+                We meet at 9:30 am on the fourth Thursday of the month at the location specified in the meeting notice.
               </p>
             </div>
             <div class="col-md-4">
@@ -166,7 +166,11 @@ tree: true
 									<strong>Phone:</strong><br />
 									208-301-3528<br />
                   <strong>Email:</strong><br />
-                  <a href="mailto:luke@historymint.com">luke@historymint.com</a> <!-- Todo | Needs to be obfuscated-->
+                  <a href="mailto:luke@historymint.com">luke@historymint.com</a><br/> <!-- Todo | Needs to be obfuscated-->
+                  <strong>Mailing Address:</strong><br />
+									Latah Preservation Commission<br />
+                  P.O. Box 8068<br />
+                  Moscow, ID 83843
                 </div>
               </div>
             </div>
