Update _pages/dept/sheriff/concealWeapons.html, _pages/dept/sheriff/home.html, _pages/dept/sheriff/records.html files

--- a/_pages/dept/sheriff/records.html
+++ b/_pages/dept/sheriff/records.html
@@ -15,7 +15,7 @@ permalink: /sheriff/records
 
     <div id="collapse1" class="collapse">
       <div class="panel-body">
-      The Latah County Sheriff’s Office Records Office is open from 7:00 a.m. to 4:00 p.m. Monday through Thursday and Friday 7:00 a.m. to 11:00 a.m. excluding holidays. The Records Office can be reached in person at the Latah County Sheriff’s Office in the Latah County Courthouse, 522 S. Adams St, Moscow, Id, 83843 or by telephone at 208-883-2266 or 208-882-2216.
+      The Latah County Sheriff’s Office Records Office is open from 7:00 a.m. to 4:00 p.m. Monday through Friday excluding holidays. The Records Office can be reached in person at the Latah County Sheriff’s Office in the Latah County Courthouse, 522 S. Adams St, Moscow, Id, 83843 or by telephone at 208-883-2266 or 208-882-2216.
       </div>
     </div>
   </div>
@@ -31,7 +31,7 @@ permalink: /sheriff/records
 
     <div id="collapse2" class="collapse">
       <div class="panel-body">
-        To request a Records Check, come to the Records Office between 7:00 a.m. to 4:00 p.m. Monday through Thursday and Friday 7:00 a.m. to 11:00 a.m. with the full name and date of birth of the person in question along with
+        To request a Records Check, come to the Records Office between 7:00 a.m. to 4:00 p.m. Monday through Friday excluding holidays with the full name and date of birth of the person in question along with
         a waiver for release of information signed by the person in question. The request will either be processed at that time or you will be asked to return for that information.
         <br><br>
         If you want to request a statewide Records Check, you will need to contact the Idaho State Police/Bureau of Criminal Identification for further instructions.
@@ -100,7 +100,7 @@ permalink: /sheriff/records
         <b>Registrant information</b>
         <br><br>
         Sex Offender registrations and status changes are processed through the Records Office during regular business hours, if possible.
-        The Records Office hours are 7:00 a.m. to 4:00 p.m. Monday through Thursday and Friday 7:00 a.m. to 11:00 a.m. excluding holidays.
+        The Records Office hours are 7:00 a.m. to 4:00 p.m. Monday through Friday excluding holidays.
         Annual registrations and new registrations require fingerprinting that will be done at the Latah County Records department.        
       
         Annual registrations and new registrations also require a trip to the Drivers Licensing, at the Latah County Annex, so your photograph can be taken.
