--- a/_pages/dept/sheriff/concealWeapons.html
+++ b/_pages/dept/sheriff/concealWeapons.html
@@ -5,9 +5,9 @@ permalink: /sheriff/concealWeapons
 <div class="panel panel-default" >
   
   <div class="panel-body">
-    <p>Concealed Weapons Licenses and renewals, standard and enhanced, are processed through the Records Office during regular business hours, if possible. The Records Office hours are 7:00 a.m. to 4:00 p.m. Monday through Thursday and Friday 7:00 a.m. to 11:00 a.m. excluding holidays.</p>
-    <p>To apply for the <b>standard concealed weapons license</b>, you need to complete the appropriate application packet located in the forms section (forms 1-3), be fingerprinted, provide a copy of your firearms training and pay a $59.85 fee (exact cash or check).</p>
-    <p>To apply for the <b>enhanced concealed weapons license</b>, you need to complete the appropriate application packet located in the forms section (forms 1-4), which includes a specific training certificate and is usually completed at an approved class, be fingerprinted and pay a $59.85 fee (exact cash or check).  The enhanced concealed weapons license became available July 1, 2013 with the following training criteria (which is different than what is required for a standard concealed weapons license) and must be completed within twelve (12) months immediately preceding the filing of the application:
+    <p>Concealed Weapons Licenses and renewals, standard and enhanced, are processed through the Records Office during regular business hours, if possible. The Records Office hours are 7:00 a.m. to 4:00 p.m. Monday through Friday excluding holidays.</p>
+    <p>To apply for the <b>standard concealed weapons license</b>, you need to complete the appropriate application packet located in the forms section (forms 1-3), be fingerprinted, provide a copy of your firearms training and pay a $54.85 fee (exact cash or check).</p>
+    <p>To apply for the <b>enhanced concealed weapons license</b>, you need to complete the appropriate application packet located in the forms section (forms 1-4), which includes a specific training certificate and is usually completed at an approved class, be fingerprinted and pay a $54.85 fee (exact cash or check).  The enhanced concealed weapons license became available July 1, 2013 with the following training criteria (which is different than what is required for a standard concealed weapons license) and must be completed within twelve (12) months immediately preceding the filing of the application:
       <br>
     <p>As per Idaho Code §18-3302K (4)(b)(i)-(iv)
       (i)The course instructor is certified by the national rifle association, or by another nationally recognized organization that customarily certifies firearms instructors as an instructor in personal protection with handguns, or the course instructor is certified by the Idaho Peace Officers Standards and Training council as a firearms instructor;
@@ -29,7 +29,7 @@ permalink: /sheriff/concealWeapons
       <br>
     </p>
 
-      <p>To renew your concealed weapons license, you will need to complete the appropriate application packet and pay a $37.85 fee (exact cash or check).  You may renew your license at any time during the ninety (90) day period before or after its expiration date.  Any licensee renewing ninety-one (91) days to one hundred eighty (180) days after the expiration date of the license shall pay a late renewal penalty of ten ($10.00) dollars in addition to the renewal fee of fifty ($37.85) dollars.  After one hundred eighty-one (181) days, the licensee shall be required to submit an initial application for a concealed weapons license and pay an $59.85 fee.
+      <p>To renew your concealed weapons license, you will need to complete the appropriate application packet and pay a $37.85 fee (exact cash or check).  You may renew your license at any time during the ninety (90) day period before or after its expiration date.  Any licensee renewing ninety-one (91) days to one hundred eighty (180) days after the expiration date of the license shall pay a late renewal penalty of ten ($10.00) dollars in addition to the renewal fee of fifty ($37.85) dollars.  After one hundred eighty-one (181) days, the licensee shall be required to submit an initial application for a concealed weapons license and pay an $54.85 fee.
       </p>
 
       <p>The concealed weapons licensee process can take up to 90 days but is usually completed in less time than that.</p>
