--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -148,6 +148,10 @@ tree: true
               <p>
                 We meet at 9:30 am on the fourth Thursday of the month at the location specified in the meeting notice.
               </p>
+              <br>
+              <p>
+                <a href="https://gis.latah.id.us/latahview" class="btn btn-default" target="_blank">Heritage Map</a>
+              </p>
             </div>
             <div class="col-md-4">
               <div class="panel panel-default">
