Updated text in DL

--- a/_pages/dept/driver_licensing/home.html
+++ b/_pages/dept/driver_licensing/home.html
@@ -25,12 +25,12 @@ tree: true
       <div class="panel panel-primary">
         <div class="panel-body text-center">
           <p>
-            Fingerprinting is available at the Driver's License office M-F from 8:00 am to 4:00 pm.
+            Fingerprinting and written tests are available at the Driver's License office M-F from 8:00 am to 4:00 pm.
           </p>
         </div>
       </div>
     </div>
-    <!-- End Fingerprinting -->   
+    <!-- End Fingerprinting -->      
     
     <div class="row" id="newsNotices">
         <div class="container col-md-6" id="notices">
