Added Precincts & District maps link.

--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -39,6 +39,12 @@ fileDownload: true
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Historic Places" %}
             </figure>
           </a>
+          <a href="https://gis.latah.id.us/voter/districts.html">
+            <figure class="col-md-6">
+              <figcaption class="text-center" style="font-size: 1.5em">Precincts & Districts</figcaption>              
+              {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Precincts & Districts" %}
+            </figure>
+          </a>
           <a href="http://gis.latah.id.us/ParcelViewer/Surveys.html">
             <figure class="col-md-6">
               <figcaption class="text-center" style="font-size: 1.5em">Subdivisions &amp; Surveys<br /> (work in progress)</figcaption>              
