--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -10,14 +10,14 @@ fileDownload: true
   <div class="col-md-8 ">
     <div class="well">
       <div class="row">
-        <a href="http://gis.latah.id.us/ParcelViewer/ParcelViewer.html">
+        <a href="http://gis.latah.id.us/ParcelViewer/ParcelViewer.html" target="_blank">
           <figure class="col-md-6">
             <figcaption class="text-center" style="font-size: 1.5em">Parcel Viewer</figcaption>
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Parcel Viewer"> -->
             {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Parcel Viewer" %}
           </figure>
         </a>
-        <a href="http://gis.latah.id.us/publicmap/index.html">
+        <a href="http://gis.latah.id.us/publicmap/index.html" target="_blank">
           <figure class="col-md-6">
             <figcaption class="text-center" style="font-size: 1.5em">Public Map</figcaption>
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Public Map"> -->
@@ -26,26 +26,26 @@ fileDownload: true
         </a>
       </div>
       <div class="row">
-        <a href="https://gis.latah.id.us/Subscription/Index.html">
+        <a href="https://gis.latah.id.us/Subscription/Index.html" target="_blank">
           <figure class="col-md-6">
             <figcaption class="text-center" style="font-size: 1.5em">Subscription Map</figcaption>
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Subscription Map"> -->
             {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Subscription Map" %}
           </figure>
-          <a href="https://gis.latah.id.us/latahview">
+          <a href="https://gis.latah.id.us/latahview" target="_blank">
             <figure class="col-md-6">
               <figcaption class="text-center" style="font-size: 1.5em">Historic Places</figcaption>
               <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Historic Places"> -->
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Historic Places" %}
             </figure>
           </a>
-          <a href="https://gis.latah.id.us/voter/districts.html">
+          <a href="https://gis.latah.id.us/voter/districts.html" target="_blank">
             <figure class="col-md-6">
               <figcaption class="text-center" style="font-size: 1.5em">Precincts & Districts</figcaption>              
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Precincts & Districts" %}
             </figure>
           </a>
-          <a href="http://gis.latah.id.us/ParcelViewer/Surveys.html">
+          <a href="http://gis.latah.id.us/ParcelViewer/Surveys.html" target="_blank">
             <figure class="col-md-6">
               <figcaption class="text-center" style="font-size: 1.5em">Subdivisions &amp; Surveys<br /> (work in progress)</figcaption>              
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Subdivisions &amp; Surveys" %}
