--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -17,10 +17,8 @@ fileDownload: true
             <img src="https://idahovotes.gov/images/LinkedIn.jpg" class="center-block" width="320" alt="Idaho Votes">
           </a>
         </div>
-        <div class="col-md-6 center-block">
-          <video class="center-block" width="320" height="180" controls>
-            <source src="https://idahovotes.gov/videos/Extended_Video.mp4" type="video/mp4"> Your browser does not support the video tag.
-          </video>
+        <div class="col-md-6 center-block">      
+          <iframe class="embed-responsive-item" width="320" height="180" src="https://www.youtube.com/embed/VDC6tbUFBnc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
