adding button for historic touring map for the LPC comm

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Commissions
 permalink: /commissions/
 tree: true
+fileDownload: true
 ---
 
 <div class="row">
@@ -150,6 +151,7 @@ tree: true
               </p>
               <br>
               <p>
+                <a href="#" class="btn btn-default" onclick="downloadFileEx('Latah County Historic Touring Map.pdf'); return false;">Historic Sites Touring Map</a>
                 <a href="https://gis.latah.id.us/latahview" class="btn btn-default" target="_blank">Heritage Map</a>
               </p>
             </div>
