Added downloadJobApp function to the fileDownload module, updated BOCG job app link.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -83,7 +83,7 @@ fileDownload: true
                 The BOCG is currently seeking new members. Members must be at least 18 years of age and must agree to completion of a fingerprint based criminal background check.
               </p>
               <p>
-                If you are interested in serving your community through volunteer work with the Latah County Board of Community Guardians, please complete a <a href="" target="_blank">Volunteer Application</a>. Applications may be submitted to the BOCG via postal mail or email.
+                If you are interested in serving your community through volunteer work with the Latah County Board of Community Guardians, please complete a <a href="#" onclick="downloadJobApp('LCBOCG Volunteer Application.pdf'); return false;" target="_blank">Volunteer Application</a>. Applications may be submitted to the BOCG via postal mail or email.
                 <!--Todo | Needs direct download link to the volunteer Application -->
               </p>
             </div>
