Changes to Rural Recycling

--- a/_pages/dept/solid_waste/ruralrecycling.html
+++ b/_pages/dept/solid_waste/ruralrecycling.html
@@ -35,25 +35,7 @@ permalink: /solid_waste/ruralrecycling
 
       <p>
         <strong>For more recycling options use Moscow Recycling Center</strong>
+        <br />
+        <a href="#" onclick="downloadFileEx('No longer accepting plastic and glass.pdf'); return false;" target="_blank">Please Review the Updated Guidelines</a>
       </p>
-      <p>
-        Recycling items must be deposited as labeled on box. Remove and discard lids and no plastic bags. Please follow the guidelines below and signs on boxes.
-      </p>
-      <p>
-        <strong>CARDBOARD:</strong> Please flatten.
-      </p>
-      <p>
-        <strong>METALS:</strong> (Please rinse) Aluminum/tin cans.  <strong>Not allowed in box:</strong> foil, paint or aerosol cans.
-      </p>
-      <p>
-        <strong>GLASS:</strong> (Please rinse & remove lids) Bottles & jars.  <strong>Not allowed in box:</strong> window glass, light bulbs, pyrex, ceramics, windshields, vases or drinking glasses.
-      </p>
-      <p>
-        <strong>PAPER:</strong> (Place loose in container) Magazines/catalogs, newspaper (including glossy ads), telephone books, junk mail (envelopes with plastic windows accepted), dry food boxes (such as cereal, remove liners), paper bags/sacks, gift wrap.  <strong>Not allowed in box:</strong> tissues, paper towels/cups/plates, cartons from milk, soy, juice or ice cream, food soiled papers or pet food bags.
-      </p>
-      <p>
-        <strong>PLASTICS:</strong> (must be larger than 6 oz, rinse & remove lids). Jugs (such as milk, detergent,  fabric softener), jars (such as peanut butter), bottles (such as water, soda, shampoo), dairy  tubs (such as butter, cottage cheese),<SPAN lang="EN"> clamshell containers (</SPAN>such as deli/fresh   produce<SPAN lang="EN">)</SPAN>.
-      </p>
-      <p>
-        <strong>Common Problem Items NOT ACCEPTED: </strong> Pet food bags, plastic bags/wrap, plastic storage bins, planters/pots, plastic toys, aseptic (paper) cartons, foil, oil, styrofoam, or any hazardous waste containers.
-      </p>
+      
