--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -4,6 +4,7 @@ title: Solid Waste
 permalink: /solid_waste/
 tree: true
 news: true
+fileDownload: true
 ---
 <div class="row">
 	<div class="col-md-8">
