Adding SW newsletter image

--- a/_pages/dept/solid_waste/ruralrecycling.html
+++ b/_pages/dept/solid_waste/ruralrecycling.html
@@ -36,6 +36,7 @@ permalink: /solid_waste/ruralrecycling
       <p>
         <strong>For more recycling options use Moscow Recycling Center</strong>
         <br />
-        <a href="#" onclick="downloadFileEx('No longer accepting plastic and glass.pdf'); return false;" target="_blank">Please Review the Updated Guidelines</a>
+        {% cloudinary /img/SwNewsLetter.png class="figure-img img-responsive rounded center-block" alt="Solid Waste News Letter" %}
+        <!-- <a href="#" onclick="downloadFileEx('No longer accepting plastic and glass.pdf'); return false;" target="_blank">Please Review the Updated Guidelines</a> -->
       </p>
       
