--- a/_pages/officials/commissioners/dick_walser.html
+++ b/_pages/officials/commissioners/dick_walser.html
@@ -28,12 +28,12 @@ permalink: /commissioners/bio/dick_walser/
           {% endif %}
           {% if official.facebook != nil %}
           <div class="col-md-4 text-center">
-            <a href="{{ official.facebook }}" target="_blank" rel="noopener"><i class="fa fa-2x fa-facebook text-center"></i></a>&nbsp;
+            <a href="{{ official.facebook }}" target="_blank" rel="noopener"><i class="fab fa-2x fa-facebook text-center"></i></a>&nbsp;
           </div>
           {% endif %}
           {% if official.twitter != nil %}
           <div class="col-md-4 text-center">
-            <a href="{{ official.twitter }}" target="_blank" rel="noopener"><i class="fa fa-2x fa-twitter"></i></a>
+            <a href="{{ official.twitter }}" target="_blank" rel="noopener"><i class="fab fa-2x fa-twitter"></i></a>
           </div>
           {% endif %}
         </div>
