Adding jail PREA statement

--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -57,6 +57,7 @@ fileDownload: true
 				<a href="../jailInspections.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Jail Inspections</a>
 				<a href="../jailPostingBond.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Posting Bond</a>				
 				<a href="../jailVisitingInfo.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Visiting Information</a>
+				<a href="../jailPREA.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Prison Rape Elimination Act (PREA)</a>
 				<a href="/sheriff/" data-remote="false" class="list-group-item list-link text-center">Sheriff Home</a>
 			</div>
 		</div>
